kustomize/overlay/staging/iwiick-proj-10-staging-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: iwiick-proj-10-staging
  labels:
    environment-id: env_8f80147e-38ab-4783-8be0-5f37cb75319f
    project-id: project_ca80c30a-ca6d-4fd5-bcd0-82486b303539
    project-name: iwiick-proj-10
    environment-name: staging
    organization-id: org_fc18b32c-00a4-49d7-94ab-ee96b2c9569d
