kustomize/overlay/staging/iwiick-proj-2-staging-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: iwiick-proj-2-staging
  labels:
    environment-id: env_6a54a582-1f44-4dd4-b71f-11a2fbdad479
    project-id: project_96d4f08c-7343-469c-b00b-2ec2c3f74234
    project-name: iwiick-proj-2
    environment-name: staging
    organization-id: org_127c0816-35d9-462f-bd10-70fe8dce602c
