kustomize/overlay/staging/iwiick-proj-9-staging-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: iwiick-proj-9-staging
  labels:
    environment-id: env_293d43ab-a292-40c2-a8c5-3fe4351b1326
    project-id: project_a57a4ef7-6c27-42fe-a1e6-044fc582d436
    project-name: iwiick-proj-9
    environment-name: staging
    organization-id: org_fc18b32c-00a4-49d7-94ab-ee96b2c9569d
