kustomize/overlay/staging/iwiick-staging-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: iwiick-staging
  labels:
    environmentId: env_17cd2821-4820-4f49-bfd4-036afb45a8d2
    projectId: project_33d6eb31-f21a-4bbe-b322-75295d837ed8
    projectName: iwiick
    environmentName: staging
    organizationId: org_6de1b366-9da6-4d55-b363-f5a2c4382016
