kustomize/overlay/staging/custom-templates-staging-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-and-limited-ingress
  namespace: custom-templates-staging
  labels:
    organizationId: org_5bdc6e05-06b5-4d67-91b9-f020de5fdd93
    projectId: project_65b1f990-30d5-441e-9629-aee42c623c48
    environmentId: env_8383085e-00a1-4308-a5ff-d577ec1c1102
spec:
  podSelector: {}
  egress:
    - {}
  policyTypes:
    - Egress
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              environmentId: env_8383085e-00a1-4308-a5ff-d577ec1c1102
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: skyu-system
    - from:
        - namespaceSelector:
            matchLabels:
              role: ingress
    - from:
        - namespaceSelector:
            matchLabels:
              role: observability
