kustomize/overlay/staging/iwiick-proj-1-staging-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-and-limited-ingress
  namespace: iwiick-proj-1-staging
  labels:
    organizationId: org_d2ea4601-f582-4e43-921d-6a60eea704b3
    projectId: project_f25ad2e4-cf21-410c-b7fb-a8adad864a23
    environmentId: env_11c7ddba-3fc5-42b4-92b2-2424c944eede
spec:
  podSelector: {}
  egress:
    - {}
  policyTypes:
    - Egress
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              environmentId: env_11c7ddba-3fc5-42b4-92b2-2424c944eede
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: skyu-system
    - from:
        - namespaceSelector:
            matchLabels:
              role: ingress
    - from:
        - namespaceSelector:
            matchLabels:
              role: observability
